--- a/Classification/Logistic_Reg_sklearn_statsmodels.ipynb
+++ b/Classification/Logistic_Reg_sklearn_statsmodels.ipynb
@@ -2883,7 +2883,7 @@
    "version": "0.3.2"
   },
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -2897,7 +2897,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.4"
+   "version": "3.9.13"
   }
  },
  "nbformat": 4,
