--- a/Real Dataset Problems/Forest_Fire_Prediction.ipynb
+++ b/Real Dataset Problems/Forest_Fire_Prediction.ipynb
@@ -36,7 +36,10 @@
    "cell_type": "code",
    "execution_count": 149,
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "jupyter": {
+     "outputs_hidden": true
+    }
    },
    "outputs": [],
    "source": [
@@ -401,9 +404,7 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "source": [
     "#### Plot scatterplots and distributions of numerical features to see how they may affect the output 'area'\n",
     "\n",
@@ -416,7 +417,10 @@
    "cell_type": "code",
    "execution_count": 152,
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "jupyter": {
+     "outputs_hidden": true
+    }
    },
    "outputs": [],
    "source": [
@@ -426,9 +430,7 @@
   {
    "cell_type": "code",
    "execution_count": 153,
-   "metadata": {
-    "scrolled": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -614,7 +616,10 @@
    "cell_type": "code",
    "execution_count": 156,
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "jupyter": {
+     "outputs_hidden": true
+    }
    },
    "outputs": [],
    "source": [
@@ -1267,7 +1272,10 @@
    "cell_type": "code",
    "execution_count": 163,
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "jupyter": {
+     "outputs_hidden": true
+    }
    },
    "outputs": [],
    "source": [
@@ -1285,7 +1293,10 @@
    "cell_type": "code",
    "execution_count": 164,
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "jupyter": {
+     "outputs_hidden": true
+    }
    },
    "outputs": [],
    "source": [
@@ -1321,7 +1332,10 @@
    "cell_type": "code",
    "execution_count": 166,
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "jupyter": {
+     "outputs_hidden": true
+    }
    },
    "outputs": [],
    "source": [
@@ -1342,7 +1356,10 @@
    "cell_type": "code",
    "execution_count": 167,
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "jupyter": {
+     "outputs_hidden": true
+    }
    },
    "outputs": [],
    "source": [
@@ -1373,7 +1390,10 @@
    "cell_type": "code",
    "execution_count": 168,
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "jupyter": {
+     "outputs_hidden": true
+    }
    },
    "outputs": [],
    "source": [
@@ -1395,7 +1415,10 @@
    "cell_type": "code",
    "execution_count": 170,
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "jupyter": {
+     "outputs_hidden": true
+    }
    },
    "outputs": [],
    "source": [
@@ -1590,7 +1613,10 @@
    "cell_type": "code",
    "execution_count": 177,
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "jupyter": {
+     "outputs_hidden": true
+    }
    },
    "outputs": [],
    "source": [
@@ -1778,7 +1804,10 @@
    "cell_type": "code",
    "execution_count": 183,
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "jupyter": {
+     "outputs_hidden": true
+    }
    },
    "outputs": [],
    "source": [
@@ -2047,7 +2076,10 @@
    "cell_type": "code",
    "execution_count": 192,
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "jupyter": {
+     "outputs_hidden": true
+    }
    },
    "outputs": [],
    "source": [
@@ -2290,7 +2322,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -2304,9 +2336,9 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.2"
+   "version": "3.9.13"
   }
  },
  "nbformat": 4,
- "nbformat_minor": 2
+ "nbformat_minor": 4
 }
